fix: dependencies